Details
-
Bug
-
Resolution: Fixed
-
Major
Description
Today I tried to install Microsoft Visual Studio 2010 Professional from an MSDN CD. I received a Fatal Exception Error 0x00000050 and it shows a fairly detailed crash dump that is attached here: VS2010_Install_Crash1_NtGdiStretchDIBitsInternal.txt. When I looked at this it was somewhat of a 'deja vu' because I had recently worked on this area of the code. When I viewed the specific line that seemed to cause the problem, I could easily see what was happening. In the code that I changed, I had introduced a "use after free". The patch attached here: dibobj_c_fix_01.patch
is intended to correct this problem. I plan to create a PR shortly.
Attachments
Issue Links
- blocks
-
CORE-16236 Sims 1 Autorun Drawing Issues
-
- Resolved
-